bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:1: error: type mismatch;
 found   : Unit
 required: Boolean
def nearHundred(n:Int): Boolean = {
                                  ^